# FEB_FIRMWARE_SN5

./: .clang-format  .cubemx-manifest.json  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
BMS/test/: CMakeLists.txt  README.md
BMS/test/mocks/: cmsis_os.h  freertos_mock.c  freertos_mock.h  stm32f4xx_hal.c  stm32f4xx_hal.h
BMS/test/unit/: test_printf_redirect.cpp
DART/: .mxproject  CMakeLists.txt  CMakePresets.json  DART.ioc  README.md  STM32F042K6TX_FLASH.ld  STM32F042XX_FLASH.ld
DART/Core/Inc/: main.h  stm32f0xx_it.h  tim.h
DART/Core/Src/: can.c  dma.c  main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  tim.c  usart.c
DART/Core/User/Inc/: FEB_CAN.h  FEB_CAN_BMS.h  FEB_CAN_ID.h  FEB_DART_Commands.h  FEB_Fan.h
DART/Core/User/Src/: FEB_CAN.c  FEB_CAN_BMS.c  FEB_CAN_PingPong.c  FEB_DART_Commands.c  FEB_Fan.c  FEB_main.c
DART/Src/: main.c
DART/cmake/: gcc-arm-none-eabi.cmake
DART/cmake/stm32cubemx/: CMakeLists.txt
DASH/: .gitignore  .mxproject  BUG_FIXES_AND_VERIFICATION.md  BUILD_FIX.md  CMakeLists.txt  CMakePresets.json  DASH.ioc  PHASE1_COMPLETE.md  README.md  STM32F469XX_FLASH.ld
DASH/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
DASH/Core/Src/: can.c  dma2d.c  dsihost.c  freertos.c  gpio.c  i2c.c  ltdc.c  main.c  quadspi.c  sdio.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  usart.c
DASH/Core/User/Inc/: FEB_CAN.h  FEB_CAN_BMS.h  FEB_CAN_DASH.h  FEB_CAN_Frame_IDs.h  FEB_CAN_Heartbeat.h  FEB_CAN_ID.h  FEB_CAN_LVPDB.h  FEB_CAN_PCU.h  FEB_CAN_PingPong.h  FEB_CAN_RMS.h  FEB_CAN_RX.h  FEB_CAN_SensorNodes.h  FEB_CAN_Setup.h  FEB_CAN_State.h  FEB_CAN_TPS.h  FEB_CAN_TX.h  FEB_Commands.h  FEB_IO.h  FEB_Main.h  FEB_RTD.h  FEB_UART_Transmit.h  FEB_UI.h  FEB_UI_Helpers.h  FEB_i2c_protected.h  TPS2482.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
DASH/Core/User/Src/: FEB_CAN.c  FEB_CAN_BMS.c  FEB_CAN_DASH.c  FEB_CAN_LVPDB.c  FEB_CAN_PCU.c  FEB_CAN_PingPong.c  FEB_CAN_RMS.c  FEB_CAN_RX.c  FEB_CAN_SensorNodes.c  FEB_CAN_Setup.c  FEB_CAN_State.c  FEB_CAN_TPS.c  FEB_CAN_TX.c  FEB_Commands.c  FEB_Heartbeat.c  FEB_IO.c  FEB_Main.c  FEB_RTD.c  FEB_TPS2482.c  FEB_UI.c  FEB_UI_Helpers.c  FEB_i2c_protected.c  TPS2482.c
DASH/Core/hal_stm_lvgl/: screen_driver.c  screen_driver.h  touch_sensor_driver.c
DASH/Drivers/: lv_conf.h
DASH/Drivers/BSP/STM32469I-Discovery/: stm32469i_discovery_lcd.c
DASH/Drivers/SquareLine_UI/: ui.c
DASH/Drivers/hal_stm_lvgl/: screen_driver.c  touch_sensor_driver.c
DASH/Drivers/lvgl/scripts/: filetohex.py
DASH/Inc/: fatfs_platform.h
DASH/Middlewares/: lv_conf.h
DASH/Src/: freertos.c  gpio.c  main.c  sai.c  stm32f4xx_it.c
DASH/cmake/: starm-clang.cmake
DASH/cmake/stm32cubemx/: CMakeLists.txt
PCU/: .clangd  .mxproject  CMakeCache.txt  CMakeLists.txt  PCU.ioc  README.md  STM32F446XX_FLASH.ld  build.ninja  cmake_install.cmake  compile_commands.json
PCU/.cache/clangd/index/: cmsis_gcc.h.13DA8954C73AB55B.idx  (+60 more)
PCU/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
PCU/Core/Src/: adc.c  dma.c  gpio.c  i2c.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  tim.c  usart.c
PCU/Src/: main.c  stm32f4xx_it.c
PCU/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
RES_EBS/: .mxproject  CMakeLists.txt  RES_EBS.ioc
RES_EBS/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
RES_EBS/Core/Src/: can.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c  usart.c
Sensor_Nodes/: .mxproject  CMakeLists.txt  README.md  Sensor_Nodes.ioc
Sensor_Nodes/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Sensor_Nodes/Core/Src/: adc.c  can.c  dma.c  gpio.c  i2c.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c
Sensor_Nodes/cmake/stm32cubemx/: CMakeLists.txt
UART_TEST/: .mxproject  CMakeLists.txt  README.md  STM32U575xx_FLASH.ld  UART_TEST.ioc
UART_TEST/Core/Inc/: FreeRTOSConfig.h  app_freertos.h  stm32u5xx_it.h
UART_TEST/Core/Src/: app_freertos.c  gpdma.c  gpio.c  main.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c  usart.c
UART_TEST/Src/: app_freertos.c  main.c  stm32u5xx_it.c
UART_TEST/cmake/: starm-clang.cmake
UART_TEST/cmake/stm32cubemx/: CMakeLists.txt
common/: CMakeLists.txt  README.md
common/FEB_ADBMS_Library/: CMakeLists.txt
common/FEB_ADBMS_Library/Inc/: ADBMS6830B_Memory_Map.h  ADBMS6830B_Registers.h
common/FEB_ADBMS_Library/Src/: ADBMS6830B_Registers.c
common/FEB_CAN_Library/: CMakeLists.txt  README.md
common/FEB_CAN_Library/Inc/: feb_can_config.h  feb_can_internal.h  feb_can_lib.h
common/FEB_CAN_Library/Src/: feb_can.c  feb_can_filter.c  feb_can_rx.c  feb_can_tx.c
common/FEB_Console_Library/: CMakeLists.txt  README.md
common/FEB_Console_Library/Inc/: feb_console.h  feb_console_commands.h
common/FEB_Console_Library/Src/: feb_console.c  feb_console_commands.c
common/FEB_RTOS_Utils/: CMakeLists.txt  README.md
common/FEB_RTOS_Utils/Inc/: feb_rtos_utils.h
common/FEB_Serial_Library/: CMakeLists.txt  README.md
common/FEB_Serial_Library/FEB_Commands/: CMakeLists.txt
common/FEB_Serial_Library/FEB_Console/: CMakeLists.txt
common/FEB_Serial_Library/FEB_Log/: CMakeLists.txt
common/FEB_Serial_Library/FEB_String_Utils/: CMakeLists.txt
common/FEB_Serial_Library/FEB_UART/: CMakeLists.txt
common/FEB_Serial_Library/FEB_Version/: CMakeLists.txt
common/FEB_TPS_Library/: CMakeLists.txt  README.md
common/FEB_TPS_Library/Inc/: feb_tps.h  feb_tps_config.h  feb_tps_internal.h  feb_tps_registers.h
common/FEB_TPS_Library/Src/: feb_tps.c
common/FEB_TPS_Library/Tests/: CMakeLists.txt  hal_mock.c  hal_mock.h  main.h  test_feb_tps.c  test_feb_tps_logic.py
common/FEB_Time_Library/: CMakeLists.txt  README.md
common/FEB_Time_Library/Inc/: feb_time.h
common/FEB_Time_Library/Src/: feb_time.c
common/FEB_UART_Library/: CMakeLists.txt  README.md  feb_uart.c  feb_uart.h  feb_uart_config.h  feb_uart_internal.h  feb_uart_log.h
common/FEB_UART_Library/Inc/: feb_uart.h  feb_uart_config.h  feb_uart_internal.h  feb_uart_log.h
common/FEB_UART_Library/Src/: feb_uart.c
(+474 files in other folders)
